# django_starter

./: Makefile  pyproject.toml
core/django_starter/settings/: __init__.py  base.py  docker.py  logging.py
core/django_starter/settings/templates/: settings.dev.py
