[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = ""
authors = ["Eimantas Nejus <eimantas.nejus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
django-filter = "^23.3"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
exclude = [".git", "__pycache", ".venv", ".editorconfig", "Makefile"]
accept-encodings = "utf-8"
filename = "*.py"
max-complexity = 12
